--- a/UI/forms/OBSBasic.ui
+++ b/UI/forms/OBSBasic.ui
@@ -1304,7 +1304,7 @@
      <property name="bottomMargin">
       <number>4</number>
      </property>
-     <item>
+     <!-- <item>
       <layout class="QHBoxLayout" name="horizontalLayout_7">
        <item>
         <widget class="QPushButton" name="streamButton">
@@ -1357,7 +1357,7 @@
         </widget>
        </item>
       </layout>
-     </item>
+     </item> -->
      <item>
       <layout class="QHBoxLayout" name="recordingLayout">
        <property name="spacing">
